--- a/local_version/front/package.json
+++ b/local_version/front/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
